--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,5 +7,10 @@
       {% if site.dribbbleUsername %}<a href="https://dribbble.com/{{ site.dribbbleUsername }}">Dribbble</a>{% endif %}
       {% if site.codepenUsername %}<a href="http://codepen.io/{{ site.codepenUsername }}">CodePen</a>{% endif %}
     </p>
+    <style>
+      .u-container c-footer__container {
+      right: 20px;
+      }
+    <style/>
   </div>
 </footer>
